Fix visible feedback form on landing (caused by previous commit)

--- a/app/assets/stylesheets/poc/_general.scss
+++ b/app/assets/stylesheets/poc/_general.scss
@@ -56,6 +56,7 @@ section {
 }
 
 .feedback {
+  clear: both;
   padding: $spacing-1 0 $spacing-3 0;
 
   a {
